WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197044
Web Inspector: InspectorFrontendHost::inspectionLevel returns wrong value for inspector3
https://bugs.webkit.org/show_bug.cgi?id=197044
Summary
Web Inspector: InspectorFrontendHost::inspectionLevel returns wrong value for...
Devin Rousso
Reported
2019-04-17 17:45:04 PDT
.
Attachments
Patch
(4.64 KB, patch)
2019-04-17 17:47 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-04-17 17:47:00 PDT
Created
attachment 367704
[details]
Patch
Joseph Pecoraro
Comment 2
2019-04-17 20:17:12 PDT
Comment on
attachment 367704
[details]
Patch r=me, I wonder when this broke
WebKit Commit Bot
Comment 3
2019-04-17 20:43:59 PDT
Comment on
attachment 367704
[details]
Patch Clearing flags on attachment: 367704 Committed
r244418
: <
https://trac.webkit.org/changeset/244418
>
WebKit Commit Bot
Comment 4
2019-04-17 20:44:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-04-17 20:44:14 PDT
<
rdar://problem/50004221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug