Source/WebKit/UIProcess/RemoteWebInspectorProxy.cpp
@@ -150,7 +150,7 @@ void RemoteWebInspectorProxy::createFrontendPageAndWindow()
 
     m_inspectorPage = platformCreateFrontendPageAndWindow();
 
-    trackInspectorPage(m_inspectorPage);
+    trackInspectorPage(m_inspectorPage, nullptr);
 
     m_inspectorPage->process().addMessageReceiver(Messages::RemoteWebInspectorProxy::messageReceiverName(), m_inspectorPage->pageID(), *this);
     m_inspectorPage->process().assumeReadAccessToBaseURL(*m_inspectorPage, WebInspectorProxy::inspectorBaseURL());
